# framingham-bus

./: .gitignore  .gitmodules  README.md  pyproject.toml
analysis/: data_analysis.ipynb
formulations/: decomp_test.py  definition_commons.py  solution.py
formulations/formulation_1/: formulation_1.py  problem_definition_1.py  toy_graph_1.py
formulations/formulation_2/: formulation_2.py
formulations/formulation_3/: problem_definition_3.py  toy_graph_3.py
framingham.mcdplib/: driver.graphvis.json  driver.mcdp  driver_interface.mcdp_interface  economic_defaults.mcdp  economic_parameters.mcdp_poset  economic_parameters_interface.mcdp_interface  fleet.mcdp  fleet_bus_count.mcdp  fleet_composition.mcdp_poset  fleet_interface.mcdp_interface  fuel.mcdp  fuel_interface.mcdp_interface  maintenance.mcdp  maintenance_interface.mcdp_interface  monitor.graphvis.json  monitor.mcdp  monitor_interface.mcdp_interface  rounds.mcdp  rounds_interface.mcdp_interface  routing.mcdp  routing_policy_defaults.graphvis.json  routing_policy_defaults.mcdp  routing_policy_parameters.mcdp_poset  routing_policy_parameters_interface.mcdp_interface  routing_simple.mcdp_query  routing_simple.mcdp_query.yaml  test_primitve_dp.mcdp_primitivedp  test_template.mcdp_template
out-mcdp-plot-routing-static/: routing-dp_repr_long_labeled.txt  routing-ndp_graph_enclosed_LR_simplified.dot  routing-ndp_graph_normal_LR.dot
out-query/: output.yaml
tests/: test_problem_definition_one.py
