[project]
name = "framingham-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cvxpy>=1.8.1",
    "fiona>=1.10.1",
    "folium>=0.12",
    "geopandas>=1.1.2",
    "gurobipy>=13.0.1",
    "jupyterlab>=4.5.3",
    "mapclassify>=2.10.0",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "numpy>=2.4.1",
    "openpyxl>=3.1.5",
    "osmnx>=2.1.0",
    "pandas>=3.0.0",
    "pycairo>=1.29.0",
    "pytest>=9.0.2",
]
